fix(build assets error): build assets error
Change-Id: Ib5af57b10a35e3d2f0bcea236449d3aa62cf3306

--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -9,5 +9,8 @@
     "sourceMap": false,
     "declaration": true,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
