--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,8 @@
     "sourceMap": false,
     "declaration": true,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
