--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rx-from-async-iterator",
-  "version": "1.3.0",
+  "version": "1.3.2",
   "description": "Convert asyncGenerator object to Rx.Observable",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -10,7 +10,7 @@
     "build": "npm run build:es&&npm run build:lib",
     "build:es": "rimraf es&&tsc -p tsconfig.json",
     "build:lib": "rimraf lib&&tsc -p tsconfig.es5.json",
-    "prepare": "npm build",
+    "prepare": "npm run build",
     "pub": "npm publish --registry=https://registry.npmjs.org"
   },
   "peerDependencies": {
