--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,19 +6,34 @@
   "configurations": [
     {
       "type": "node",
-      "request": "launch",
-      "name": "Launch Program",
+      "request": "attach",
+      "name": "Attach",
+      "port": 9229,
       "skipFiles": [
         "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}/lib/index.js",
-      "outFiles": [
-        "${workspaceFolder}/**/*.js"
       ]
     },
     {
       "type": "node",
       "request": "launch",
+      "name": "Launch Program",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/lib/index.js",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "windows": {
+        "runtimeArgs": [
+          "--inspect-brk",
+          "node_modules/jest/bin/jest.js",
+          "--runInBand",
+          "-c",
+          "./jest.config.js",
+          "__tests__/index.ts"
+        ]
+      },
       "name": "TaskComponent:debug",
       "cwd": "${workspaceRoot}",
       "runtimeArgs": [
