--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rx-from-async-iterator",
-  "version": "1.5.1",
+  "version": "1.5.5",
   "description": "Convert asyncGenerator object to Rx.Observable",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -19,6 +19,7 @@
     "es",
     "README.md"
   ],
+  "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LPegasus/rx-from-async-iterator.git"
@@ -33,14 +34,15 @@
   },
   "homepage": "https://github.com/LPegasus/rx-from-async-iterator#readme",
   "devDependencies": {
-    "@types/jest": "^25.2.0",
-    "jest": "^25.3.0",
+    "@types/jest": "26.0.16",
+    "jest": "^26.6.3",
     "rimraf": "^3.0.0",
-    "ts-jest": "^25.3.0",
-    "typescript": "^3.7.3"
+    "ts-jest": "^26.4.4",
+    "tsdx": "^0.14.1",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
-    "tslib": "^1.10.0",
-    "rxjs": "^6.0.0"
+    "rxjs": "^6.0.0",
+    "tslib": "^1.10.0"
   }
 }
